<resources>
    <string name="app_name">FinancialApp</string>
    <string-array name="left_menu_titles">
        <item>Курс на дату</item>
        <item>История изменения курсов</item>
        <item>Конвертер валют</item>
    </string-array>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="values_history_fragment">Values history fragment</string>
    <string name="converter_fragment">Converter fragment</string>
    <string name="selected_date">Selected date</string>
    <string name="select_date">Выбрать дату</string>
    <string name="connection_error">connection error</string>
    <string name="xml_error">xml error</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="currency">Валюта:</string>
    <string name="write_value">1</string>
    <string name="calculate">Посчитать</string>
    <string name="from_currency">Конвертировать с</string>
    <string name="to_currency">Конвертировать в</string>
</resources>